# MSPricingModel

./: .gitignore  HANDOFF.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: deploy.yml
app/: state.py  streamlit_app.py
app/tabs/: assumptions.py  calculation.py  configuration.py  documentation.py  experience_study.py  formulas.py  granular.py  output.py  sensitivity.py
docs/: VALIDATION_PLAN.md  tx_assumptions.xlsx
src/medigap_engine/: __init__.py
src/medigap_engine/data/: default_assumptions.json  default_cells.json
src/medigap_engine/engine/: __init__.py  aggregate.py  formulas.py  forward_solver.py  lookups.py  metrics.py  project.py  run.py  sensitivity.py  solver.py
src/medigap_engine/experience/: __init__.py  ae.py  claims.py  credibility.py  decomp.py  port.py  sales.py  schema.py
src/medigap_engine/io/: defaults.py  excel_export.py  excel_import.py  model_io.py  serialize.py  tables.py
tests/: conftest.py  test_aggregate.py  test_antiselection.py  test_credibility.py  test_decomp.py  test_excel_export.py  test_excel_import.py  test_excel_round_trip.py  test_experience_ae.py  test_experience_claims.py  test_experience_sales.py  test_formulas.py  test_lookups.py  test_metrics.py  test_model_io.py  test_port.py  test_premium_distribution.py  test_project_cell.py  test_pull_forward.py  test_rerates_by_state.py  test_sensitivity.py  test_serialize.py  test_solver.py  test_tx_validation.py
tools/: compare_tx.py  extract_samples.py  generate_seed.py  multistate_reference.json
web/: index.html
(+10 files in other folders)
